# ChangeLog for dev-db/apgdiff
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  01 Dec 2006; Miroslav Šulc <miroslav.sulc@startnet.cz> ChangeLog:
  new ebuild
