@@ -1,16 +1,16 @@
-AUX apgdiff-1.0.0_beta12-build.xml 3930 RMD160 1f8d50e780567a6a1441e4f45df09737d47dc186 SHA1 3a9100f33c700288a1d96baedbe858ec161be215 SHA256 903e46a175959bf2963fa9f370d141b22daa3d7cd7ee11c3e9c5f5c71ca428d2
-MD5 c62b20e9e6be8b8cbb63cf082443ec0e files/apgdiff-1.0.0_beta12-build.xml 3930
-RMD160 1f8d50e780567a6a1441e4f45df09737d47dc186 files/apgdiff-1.0.0_beta12-build.xml 3930
-SHA256 903e46a175959bf2963fa9f370d141b22daa3d7cd7ee11c3e9c5f5c71ca428d2 files/apgdiff-1.0.0_beta12-build.xml 3930
+AUX apgdiff-1.0.0_beta12-build.xml 4096 RMD160 78ca615ba7cfb07d260ca1e84ad73f2baf346510 SHA1 bcf2ea9024a7cbdffd3a2d4407375201943b19a3 SHA256 b66aae06206766c61062d9887abcfe811cbb6b87b5bcb8c0ce869beb0a904173
+MD5 7ec4d3b260c25d212a6558022815c64d files/apgdiff-1.0.0_beta12-build.xml 4096
+RMD160 78ca615ba7cfb07d260ca1e84ad73f2baf346510 files/apgdiff-1.0.0_beta12-build.xml 4096
+SHA256 b66aae06206766c61062d9887abcfe811cbb6b87b5bcb8c0ce869beb0a904173 files/apgdiff-1.0.0_beta12-build.xml 4096
 DIST apgdiff-1.0.0_beta12-src.zip 103025 RMD160 94f202039b772f0cc97f3108a5e555a0522d57b0 SHA1 4f4909bcc89070621dc434a7edc72352e3e0c557 SHA256 52375693866ff1960fc188fa411b84e232322387a0b0b9dc363e781c7ffcd6d3
-EBUILD apgdiff-1.0.0_beta12.ebuild 1011 RMD160 1434bc6461d350270daa840dadea65a409afdb1a SHA1 04115e292181f9cd18ce076ae3a30e48bccc7364 SHA256 3f23986a7bc5d7d1b873d8f14b58817f1f2bed9c3afd8740341c14fb19a31406
-MD5 8f0557f5a657acbb7c5ec78d24df199e apgdiff-1.0.0_beta12.ebuild 1011
-RMD160 1434bc6461d350270daa840dadea65a409afdb1a apgdiff-1.0.0_beta12.ebuild 1011
-SHA256 3f23986a7bc5d7d1b873d8f14b58817f1f2bed9c3afd8740341c14fb19a31406 apgdiff-1.0.0_beta12.ebuild 1011
-MISC ChangeLog 198 RMD160 9264a455a34bbda42065468286b14557be6137e3 SHA1 c1031ab56751ea05c4c364324f23a5097b048197 SHA256 6febf9a1f24f68cd8bc1f156e2d3a670033b4a2f035c84289418a9ea918d54b4
-MD5 6c3479d7593e5c548c2fad8f2a06da13 ChangeLog 198
-RMD160 9264a455a34bbda42065468286b14557be6137e3 ChangeLog 198
-SHA256 6febf9a1f24f68cd8bc1f156e2d3a670033b4a2f035c84289418a9ea918d54b4 ChangeLog 198
+EBUILD apgdiff-1.0.0_beta12.ebuild 1066 RMD160 495241bd39bdbe400efcf8e42e6a061650767075 SHA1 135b4721eae509c2f2a796a67082f7533c81b87d SHA256 64332351ab301dba2bf60a64c3f87d18e8f9367dbde0bc285b5762440480604e
+MD5 f2f707b6bfefcd2b8d7ab86dece0a2df apgdiff-1.0.0_beta12.ebuild 1066
+RMD160 495241bd39bdbe400efcf8e42e6a061650767075 apgdiff-1.0.0_beta12.ebuild 1066
+SHA256 64332351ab301dba2bf60a64c3f87d18e8f9367dbde0bc285b5762440480604e apgdiff-1.0.0_beta12.ebuild 1066
+MISC ChangeLog 332 RMD160 1f2c9967c11a8b24895f1374d61bf95ebfc7e7d3 SHA1 3fa7e3aaf9a691745e6f00c1497debab3f4b9613 SHA256 76346fff556c900a72227319333e2fa30770363cc14f7200508ae21cad7a37c9
+MD5 d4b9b636daa5194266f141cfd6d03b35 ChangeLog 332
+RMD160 1f2c9967c11a8b24895f1374d61bf95ebfc7e7d3 ChangeLog 332
+SHA256 76346fff556c900a72227319333e2fa30770363cc14f7200508ae21cad7a37c9 ChangeLog 332
 MISC metadata.xml 217 RMD160 6a03b58e975ef9766c1ba359b8cf73372aae1409 SHA1 9661e29f710f8b88d1ebad0d7cfa2716ae869b51 SHA256 00a5772b0da0819b665dba21d321e4e2393c818907d38678d179cafd5036c7f2
 MD5 a28ef1dbcd9ec5d985e36f5b538891b5 metadata.xml 217
 RMD160 6a03b58e975ef9766c1ba359b8cf73372aae1409 metadata.xml 217
