@@ -2,6 +2,9 @@
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  03 Dec 2006; Miroslav Šulc <miroslav.sulc@startnet.cz> ChangeLog:
+  corrected so tests with junit4 are performed without problems
+
   01 Dec 2006; Miroslav Šulc <miroslav.sulc@startnet.cz> ChangeLog:
   new ebuild
 
